# pulumi-django-celery

./: README.md  auth0.py  datadog.py  digitalocean_setup.py  elastic_setup.py  github.py  kubernetes_setup.py  main.py  providers.py  pulumi_create_stack.py  pyproject.toml  schema.py  vault_setup.py
github-workflow/: deploy-sample.yml
nextjs-setup/: env.test.tmpl  next.config.ts
templates/: datadog.yaml
